fix - colors contrast

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,7 @@
 
 :root {
 --color-grey: #818181;
---color-pink: #C15959;
+--color-pink: #c159598a;
 --toastify-color-success: #C15959 !important;
 }
 
